force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_Spend_and_Payments_Update__c.field-meta.xml
<CustomField>
    <fullName>MM_Spend_and_Payments_Update__c</fullName>
    <inlineHelpText>Review spend milestones and progress against planned grant claims for the period. Query any variances identified, exploring causes and justifications. Check whether GR is in line with A&amp;A spending rules. Explore any support needs and agree corrective actions, where required – this may include considering deployment of additional Delivery Partner support.</inlineHelpText>
    <label>Spend and Payments Update</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>