force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Monthly_Meeting_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Meeting_Date_Time__c</fullName>
    <label>Monthly Meeting Date/Time</label>
    <type>DateTime</type>
</CustomField>