force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Monthly_Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Meeting_Status__c</fullName>
    <label>Monthly Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>