force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Monthly_Meeting_Time_Display__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Meeting_Time_Display__c</fullName>
    <formula>MID(TEXT(Monthly_Meeting_Date_Time__c), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Meeting Time Display</label>
    <type>Text</type>
</CustomField>