force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Monthly_Report_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Report_Submitted_Date__c</fullName>
    <formula>Related_Monthly_Update__r.Date_of_Update__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Report Submitted Date</label>
    <type>Date</type>
</CustomField>