force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Monthly_Update_Due__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Update_Due__c</fullName>
    <description>Date that the related Monthly Update is due in any given month</description>
    <label>Monthly Update Due</label>
    <type>Date</type>
</CustomField>