force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Monthly_Update_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Update_Submitted__c</fullName>
    <label>Monthly Update Submitted</label>
    <type>Date</type>
</CustomField>