force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Overall_Assessment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Overall_Assessment_Due_Date__c</fullName>
    <description>Date that the related Monthly Update is due in any given month</description>
    <label>Overall Assessment Due Date</label>
    <type>Date</type>
</CustomField>