force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Overall_Assessment_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Overall_Assessment_Submitted_Date__c</fullName>
    <label>Overall Assessment Submitted Date</label>
    <type>Date</type>
</CustomField>