force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Overall_DCA_Final_Mark__c.field-meta.xml
<CustomField>
    <fullName>Overall_DCA_Final_Mark__c</fullName>
    <label>Overall DCA Final Mark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>