force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Overall_DQA_RAG_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_DQA_RAG_Rating__c</fullName>
    <label>Overall DQA RAG Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>