force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Overall_Performance_Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Overall_Performance_Assessment_Completed__c</fullName>
    <description>Date that all components of the assessment have been completed</description>
    <label>Overall Performance Assessment Completed</label>
    <type>Date</type>
</CustomField>