force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Overall_Perfrmance_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Perfrmance_Assessment_Status__c</fullName>
    <label>Overall Performance Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Monthly Update Received</fullName>
            </value>
            <value>
                <fullName>DQA Completed</fullName>
            </value>
            <value>
                <fullName>Meeting Completed</fullName>
            </value>
            <value>
                <fullName>Project Tiering Complete</fullName>
            </value>
            <value>
                <fullName>Assessment Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>