force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Parent_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Parent_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Funding Award Performance Management</relationshipLabel>
    <relationshipName>Funding_Award_Performance_Management</relationshipName>
    <type>Lookup</type>
</CustomField>