force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Performance_Tiering_Overall_RAG_No__c.field-meta.xml
<CustomField>
    <fullName>Performance_Tiering_Overall_RAG_No__c</fullName>
    <formula>CASE( Project_Tiering_Overall_RAG__c , 
&quot;Red&quot;, 1, 
&quot;Amber Red&quot;, 2,
&quot;Amber&quot;, 3,
&quot;Amber Green&quot;, 4,
&quot;Green&quot;,5, NULL)</formula>
    <label>Performance Tiering Overall RAG No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>