force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Pipeline_Delivery_milestones_RAG_Details__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Delivery_milestones_RAG_Details__c</fullName>
    <label>Pipeline Delivery milestones RAG Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>