force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Project_Tiering_Completed__c.field-meta.xml
<CustomField>
    <fullName>Project_Tiering_Completed__c</fullName>
    <label>Performance Tiering Completed</label>
    <type>Date</type>
</CustomField>