force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Project_Tiering_RAG_Justification__c.field-meta.xml
<CustomField>
    <fullName>Project_Tiering_RAG_Justification__c</fullName>
    <label>Performance Tiering RAG Justification</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>