force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Project_Tiering_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Tiering_Status__c</fullName>
    <label>Project Tiering Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>