force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/PSO__c.field-meta.xml
<CustomField>
    <fullName>PSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Award_Performance_Management</relationshipName>
    <type>Lookup</type>
</CustomField>