force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/PT_KPI_Delivery_Rating__c.field-meta.xml
<CustomField>
    <fullName>PT_KPI_Delivery_Rating__c</fullName>
    <label>KPI Delivery RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>