force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/PT_KPI_Delivery_Rating_Detail__c.field-meta.xml
<CustomField>
    <fullName>PT_KPI_Delivery_Rating_Detail__c</fullName>
    <label>KPI Delivery RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>