force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/PT_Quality_of_Deliverables_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>PT_Quality_of_Deliverables_RAG_Detail__c</fullName>
    <label>Quality of Deliverables RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>