force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/PT_Resident_Satisfaction_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>PT_Resident_Satisfaction_RAG_Detail__c</fullName>
    <label>Resident Satisfaction RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>