force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/PT_Risk_Management_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>PT_Risk_Management_RAG_Detail__c</fullName>
    <label>Risk and Issues RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>