force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/PT_Schedule_Adherence_RAG__c.field-meta.xml
<CustomField>
    <fullName>PT_Schedule_Adherence_RAG__c</fullName>
    <label>Schedule Adherence RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>