force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Related_Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Related_Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Funding Award Performance Management</relationshipLabel>
    <relationshipName>Funding_Award_Performance_Management</relationshipName>
    <type>Lookup</type>
</CustomField>