force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Related_Monthly_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Related_Monthly_Actuals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Monthly Actuals</label>
    <referenceTo>FundingAwardActual__c</referenceTo>
    <relationshipLabel>Funding Award Performance Management</relationshipLabel>
    <relationshipName>Funding_Award_Performance_Management</relationshipName>
    <type>Lookup</type>
</CustomField>