force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Related_Monthly_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Related_Monthly_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Monthly Forecast</description>
    <label>Related Monthly Forecast</label>
    <referenceTo>FundingAwardForecast__c</referenceTo>
    <relationshipLabel>Funding Award Performance Management</relationshipLabel>
    <relationshipName>Funding_Award_Performance_Management</relationshipName>
    <type>Lookup</type>
</CustomField>