force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Related_Monthly_Update__c.field-meta.xml
<CustomField>
    <fullName>Related_Monthly_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relevant Monthly Update for current month</description>
    <label>Related Monthly Update</label>
    <referenceTo>FundingAwardUpdate__c</referenceTo>
    <relationshipLabel>Funding Award Performance Management</relationshipLabel>
    <relationshipName>Funding_Award_Performance_Management</relationshipName>
    <type>Lookup</type>
</CustomField>