force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Reporting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_End_Date__c</fullName>
    <formula>IF(ISPICKVAL(Reporting_Month__c, &quot;December&quot;),
DATE(VALUE(TEXT(Reporting_Year__c)), 12, 31),

DATE(
    VALUE(TEXT(Reporting_Year__c)),
    CASE(
        TEXT(Reporting_Month__c),
        &quot;January&quot;, 2,
        &quot;February&quot;, 3,
        &quot;March&quot;, 4,
        &quot;April&quot;, 5,
        &quot;May&quot;, 6,
        &quot;June&quot;, 7,
        &quot;July&quot;, 8,
        &quot;August&quot;, 9,
        &quot;September&quot;, 10,
        &quot;October&quot;, 11,
        &quot;November&quot;, 12,
        &quot;December&quot;, 13,   /* rolls over into next year */
        2
    ),
    1
)

-

1
)</formula>
    <label>Reporting End Date</label>
    <type>Date</type>
</CustomField>