force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Reporting_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Start_Date__c</fullName>
    <formula>DATE(
    VALUE(TEXT(Reporting_Year__c)),
    CASE(TEXT(Reporting_Month__c),
        &quot;January&quot;, 1,
        &quot;February&quot;, 2,
        &quot;March&quot;, 3,
        &quot;April&quot;, 4,
        &quot;May&quot;, 5,
        &quot;June&quot;, 6,
        &quot;July&quot;, 7,
        &quot;August&quot;, 8,
        &quot;September&quot;, 9,
        &quot;October&quot;, 10,
        &quot;November&quot;, 11,
        &quot;December&quot;, 12,
    1 /* default value */
    ),
    1
)</formula>
    <label>Reporting Start Date</label>
    <type>Date</type>
</CustomField>