force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Schedule_Adherence_RAG_No__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Adherence_RAG_No__c</fullName>
    <formula>CASE(  PT_Schedule_Adherence_RAG__c  ,
&quot;Red&quot;, 1,
&quot;Amber Red&quot;, 2,
&quot;Amber&quot;, 3,
&quot;Amber Green&quot;, 4,
&quot;Green&quot;,5, NULL)</formula>
    <label>Schedule Adherence RAG No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>