force-app/main/default/objects/Funding_Award_Performance_Management__c/recordTypes/Warm_Homes_Performance.recordType-meta.xml
<RecordType>
    <fullName>Warm_Homes_Performance</fullName>
    <active>true</active>
    <label>Warm Homes Performance</label>
</RecordType>