force-app/main/default/objects/Funding_Award_Performance_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_Funding_Award__c</columns>
    <columns>Overall_Perfrmance_Assessment_Status__c</columns>
    <columns>Overall_Performance_Assessment_Completed__c</columns>
    <columns>DQA_Overall_RAG__c</columns>
    <columns>DQA_Completed__c</columns>
    <columns>Monthly_Meeting_Date_Time__c</columns>
    <columns>Monthly_Meeting_Status__c</columns>
    <columns>Project_Tiering_Overall_RAG__c</columns>
    <columns>Project_Tiering_Completed__c</columns>
    <columns>DCA_Overall_RAG__c</columns>
    <columns>DCA_Completed__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>