force-app/main/default/objects/Funding_Award_Performance_Management__c/listViews/Upcoming_Monthly_Meetings.listView-meta.xml
<ListView>
    <fullName>Upcoming_Monthly_Meetings</fullName>
    <columns>NAME</columns>
    <columns>Related_Funding_Award__c</columns>
    <columns>Monthly_Meeting_Date_Time__c</columns>
    <columns>Monthly_Meeting_Status__c</columns>
    <columns>GR_Contact__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Monthly_Meeting_Date_Time__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Monthly_Meeting_Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>Upcoming Monthly Meetings</label>
</ListView>